# manga

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  Manga.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
